fix: Screen overflow issue fixed

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,7 +1,7 @@
 html,
 body {
-  height: 100%;
   width: 100%;
+  max-height: 100vh;
   background-color: #011625;
   margin: 0;
 }
